--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         </div>
         <!-- Play Button -->
         <div id="play-container">
-            <img id="play-button" src="assets/sprites/button.png" alt="Play Button">
+            <img id="play-button" src="assets/sprites/play_button.png" alt="Play Button">
         </div>
     </div>
 
@@ -31,7 +31,7 @@
 
     // When pressed down
     playButton.addEventListener("mousedown", function () {
-        playButton.src = "assets/sprites/button_pressed.png";
+        playButton.src = "assets/sprites/play_button_pressed.png";
 
         buttonSound.play();
 
