Add game folder

--- a/game/maps/boss.html
+++ b/game/maps/boss.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Battle Screen</title>
-    <link rel="stylesheet" href="battle.css">
+    <link rel="stylesheet" href="boss.css">
 </head>
 
 <body>
@@ -12,7 +12,7 @@
 
 
 
-    <script src="../assets/js/enemies.js"></script>
+    <script src="../assets/js/boss.js"></script>
 
     <div id="enemy-info">
         <h2 id="enemy-name"></h2>
