--- a/game/overworld.html
+++ b/game/overworld.html
@@ -9,15 +9,43 @@
 </head>
 
 <body>
-  <h1>Overworld</h1>
 
-  <div id="character-display"></div>
+  <div id="title-container">
+    <img id="overworld-title" src="../assets/sprites/title_bar.png" alt="Overworld Title">
+    <span id="title_name">Overworld</span>
+  </div>
+
+  <!-- Character Display Card -->
+  <div id="character-card" class="hero-card">
+    <div class="card-background">
+      <div class="character-portrait">
+        <img id="hero-image" src="" alt="Selected Hero">
+      </div>
+      <div class="character-stats">
+        <h2 id="hero-name"></h2>
+        <div class="stat-row">
+          <div class="stat-item">
+            <span class="stat-label">Health:</span>
+            <span id="hero-health" class="stat-value"></span>
+          </div>
+          <div class="stat-item">
+            <span class="stat-label">Gold:</span>
+            <span id="hero-gold" class="stat-value"></span>
+          </div>
+        </div>
+        <div class="character-flavor">
+          <p id="hero-flavor"></p>
+        </div>
+      </div>
+    </div>
+  </div>
 
   <!-- Buttons to go to new areas -->
   <div class="location-buttons">
     <button id="forestBtn">Go to Forest</button>
     <button id="dungeonBtn">Enter Dungeon</button>
     <button id="templeBtn">Visit Temple</button>
+    <button id="shopBtn">Visit Shop</button>
   </div>
   <script>
     // 1. Get the query string (?character=...)
@@ -29,14 +57,13 @@
       // 2. Decode and parse JSON
       character = JSON.parse(decodeURIComponent(charData));
 
-      // 3. Show character info
-      const display = document.getElementById("character-display");
-      display.innerHTML = `
-        <h2>${character.name}</h2>
-        <p>HP: ${character.hp}</p>
-        <p>flavor: ${character.flavor}</p>
-        <p>difficulty: ${character.difficulty}</p>
-      `;
+      // 3. Populate the character card
+      document.getElementById("hero-image").src = character.image;
+      document.getElementById("hero-image").alt = character.name;
+      document.getElementById("hero-name").textContent = character.name;
+      document.getElementById("hero-health").textContent = `${character.currentHp}/${character.maxHp}`;
+      document.getElementById("hero-gold").textContent = character.gold || 0;
+      document.getElementById("hero-flavor").textContent = character.flavor;
     }
 
     // 4. Send the character data forward
@@ -50,7 +77,9 @@
     document.getElementById("forestBtn").addEventListener("click", () => goTo("forest"));
     document.getElementById("dungeonBtn").addEventListener("click", () => goTo("dungeon"));
     document.getElementById("templeBtn").addEventListener("click", () => goTo("temple"));
+    document.getElementById("shopBtn").addEventListener("click", () => goTo("shop"));
   </script>
+  <script src="../assets/js/cursor.js"></script>
 </body>
 
 </html>
