--- a/game/character_selector.html
+++ b/game/character_selector.html
@@ -55,8 +55,8 @@
         selectBtn.src = "../assets/sprites/select_button.png";
         // Pass character name via query string
         const charData = encodeURIComponent(JSON.stringify(character));
-        // window.location.href = `overworld.html?character=${charData}`;
-        window.location.href = `battle.html?character=${charData}`;
+        window.location.href = `overworld.html?character=${charData}`;
+        // window.location.href = `battle.html?character=${charData}`;
 
       });
 
