--- a/game/overworld.html
+++ b/game/overworld.html
@@ -62,7 +62,7 @@
       document.getElementById("hero-image").alt = character.name;
       document.getElementById("hero-name").textContent = character.name;
       document.getElementById("hero-health").textContent = `${character.currentHp}/${character.maxHp}`;
-      document.getElementById("hero-gold").textContent = character.gold || 0;
+      document.getElementById("hero-gold").textContent = character.gold;
       document.getElementById("hero-flavor").textContent = character.flavor;
     }
 
